fixed comments/postid == comments/id
