# service/api/api-handler.go
@@ -22,7 +22,7 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/images/:name", serveImage)
 	rt.router.GET("/stream", rt.getStream)
 	rt.router.PUT("/comments/:postid", rt.commentPost)
-	rt.router.DELETE("/comments/:commentid", rt.unCommentPost)
+	rt.router.DELETE("/comments/:postid/:commentid", rt.unCommentPost)
 	rt.router.GET("/comments/:postid", rt.getComments)
 	rt.router.GET("/likes/:postid", rt.GetLikes)
 	rt.router.PUT("/likes/:postid", rt.likePost)
